# blaze.nvim

./: .editorconfig  .gitattributes  .gitignore  .luacheckrc  .luarc.json  .styla.toml  .stylua.toml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  blaze.nvim-1.0-1.rockspec  blaze.nvim-1.0-1.src.rock  citation.bib  flake.nix  lazy.lua  md  package-lock.json  renovate.jsonc  🔥.nvim-1.0-1.rockspec
.github/workflows/: fh.yml  magitest.yml  main.yml  test.yml
LICENSES/: NOTICE
autoload/: blaze.lua  mojo.lua
doc/: blaze.txt  mojo.txt
docs/: luarocks.md
ftdetect/: mojo.lua
ftplugin/: blaze.lua  mojo.lua
indent/: blaze.lua  mojo.lua
lua/: blaze_lib.lua  init.lua
lua/blaze/: autocmds.lua  config.lua  container.lua  dap.lua  formatting.lua  health.lua  init.lua  keymaps.lua  lint.lua  linting.lua  lsp.lua  lualine.lua  magic.lua  paths.lua  pixi.lua  syntax.lua  utils.lua
lua/blaze/treesitter/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pixi.toml  pyproject.toml  tree-sitter.json
lua/blaze/treesitter/bindings/go/: binding_test.go
lua/blaze/treesitter/bindings/node/: binding.cc
lua/blaze/treesitter/bindings/rust/: lib.rs
lua/mojo/: config.lua  dap.lua  formatting.lua  health.lua  keymaps.lua  linting.lua  lsp.lua  lualine.lua  syntax.lua
plugin/: blaze.lua  mojo.lua
syntax/: blaze.lua  mojo.lua
tests/: spechelper.lua  tooling_spec.lua
tests/api/: command_spec.lua  commands_spec.lua  init_spec.lua  lsp_spec.lua  magic_spec.lua  pixi_spec.lua
(+25 files in other folders)
