[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blaze-ts"
description = "Tree-sitter for the Mojo language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "mojo"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Matt A. Porter", email = "map@qompass.ai" }]
requires-python = ">=3.10"
license.text = "AGPL-3.0 AND Q-CDA"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/qompassai/blaze.nvim"
Funding = "https://www.buymeacoffee.com/phaedrusflow"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
